@@ -91,7 +91,7 @@ same_expression (const iCode *const lic, const iCode *const ric)
   const operand *rright = IC_RIGHT (ric);
 
   // Todo: Go back chain of single-definition temporaries? Might be unsafe. Better alternative: Eliminate such assignments somewhere or avoid creating them.
-
+  // Todo: Result type!
   if (isOperandEqual (lleft, rleft) && isOperandEqual (lright, rright) ||
     IS_COMMUTATIVE (lic) && isOperandEqual (lleft, rright) && isOperandEqual (lright, rleft))
     return (true);
